Modified index.html file

--- a/Beginner/Single page CV/index.html
+++ b/Beginner/Single page CV/index.html
@@ -10,7 +10,7 @@
         <hr>
         <h1>Rodgers Fanuel Mwangi</h1>
         <section>
-            <div>Junior Frontend Developer</div>
+            <h3>Junior Frontend Developer</h3>
             <address>
                 123 Mbungoni <br>
                 Mombasa, ST 1248 <br>
@@ -20,7 +20,7 @@
         </section>
 
         <section>
-            <d>Skills</div>
+            <h3>Skills</h3>
             <p>HTML, CSS, Javascript, Accessibility, Figma to Design, Responsive Web Design, Technical
                 Writing, Presentation
             </p>
@@ -53,8 +53,8 @@
         </section>
     </main>
     <footer>
-        <small>Across the internet</small>
-        <a href="">Linkedin</a>
+        <small>Across the internet</small> <br>
+        <a href="">Linkedin</a> <br>
         <a href="">Github</a>
     </footer>
 </body>
