--- a/Beginner/Single page CV/index.html
+++ b/Beginner/Single page CV/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="CV">
+    <meta property="og:url" content="roadmap.sh">
+    <meta >
     <title>Rodgers Fanuel || CV</title>
+    <script src="https://kit.fontawesome.com/696fe727ac.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    
     <main>
         <hr>
+        <i class="fa-solid fa-user"></i>
         <h1>Rodgers Fanuel Mwangi</h1>
         <section>
             <h3>Junior Frontend Developer</h3>
