Modified SEO og tags

--- a/Beginner/Single page CV/index.html
+++ b/Beginner/Single page CV/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="CV">
-    <meta property="og:url" content="roadmap.sh">
-    <meta >
+    <meta property="og:url" content="https://roadmap.sh/r0elcompute">
+    <meta property="og:description" content="A Single page CV">
+    <meta property="og:type" content="website">
+    <meta>
     <title>Rodgers Fanuel || CV</title>
     <script src="https://kit.fontawesome.com/696fe727ac.js" crossorigin="anonymous"></script>
 </head>
