--- a/Front-end/Basic-HTML-website/index.html
+++ b/Front-end/Basic-HTML-website/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Basic HTML website">
+    <meta property="og:url" content="https://roadmap.sh">
+    <meta property="og:description" content="A basic HTML portfolio webpage">
+    <meta property="og:type" content="website">
     <title>Rodger Fanuel || Portfolio</title>
 </head>
 <body>
