modified contact.html file

--- a/Front-end/02-Basic-HTML-website/contact.html
+++ b/Front-end/02-Basic-HTML-website/contact.html
@@ -7,9 +7,17 @@
     <title>Contact me</title>
 </head>
 <body>
-    <h1>Feel free to contact me!</h1>
-    <a href="mailto:rodgersmwangi20@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-    <a href="https://github.com/r0elcompute"><i class="fa-brands fa-github"></i></a>
-    <a href="https://linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+    <h1>Feel free to reach out</h1>
+    <form action="mailto:rodgersmwangi20@gmail.com">
+        <label for="name">Name:</label>
+        <input type="text" name="text">
+        <br>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" name="email">
+        <br>
+        <br>
+        <input type="submit"> 
+    </form>
 </body>
 </html>
