--- a/Front-end/02-Basic-HTML-website/articles.html
+++ b/Front-end/02-Basic-HTML-website/articles.html
@@ -7,6 +7,21 @@
     <title>Articles</title>
 </head>
 <body>
-    <h1>Articles are to be added real soon</h1> 
+    <h1>Read the following articles</h1>
+    <article>
+        <h2>Why is responsive web design important?</h2>
+        <p>Responsive web desing in web development is important because it helps with a website's <br>
+        adaptability to different screen shapes and sizes.It helps to ensure that images, texts and <br>
+    are rendered in the same manner across all devices, be it smartphones, tablets or computers.</p>
+    </article>
+
+    <article>
+        <h2>Is AI really needed for beginners starting their web development journey?</h2>
+        <p>AI is a really deep subject of discussion as far as software development and academics is concerned. <br>
+          A beginner stepping into web development should not immediatelly kick off with the use of LLMs <br>
+          but instead should work to understand the basics of web programming.They may use AI only if they have <br>
+          deeply and truly understood the basic knowledge of web programming</p>
+    </article>
+    <p>Disclaimer: I wrote this articles are mockups not really rooted in the thoughts of the articles.</p>
 </body>
 </html>
