--- a/Front-end/02-Basic-HTML-website/contact.html
+++ b/Front-end/02-Basic-HTML-website/contact.html
@@ -10,12 +10,15 @@
     <h1>Feel free to reach out</h1>
     <form action="mailto:rodgersmwangi20@gmail.com">
         <label for="name">Name:</label>
-        <input type="text" name="text">
+        <input type="text" name="text" id="name" required>
         <br>
         <br>
         <label for="email">Email:</label>
-        <input type="email" name="email">
+        <input type="email" name="email" id="email" required>
         <br>
+        <br>
+        <label for="message"></label>
+        <textarea name="message" cols="30" rows="10" id="message"></textarea>
         <br>
         <input type="submit"> 
     </form>
