--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -7,12 +7,13 @@
     <meta property="og:url" content="https://roadmap.sh">
     <meta property="og:description" content="A basic HTML portfolio webpage">
     <meta property="og:type" content="website">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Rodger Fanuel || Portfolio</title>
 </head>
 <body>
     <header>
         <nav>
-            <span></span>
+            <span>Rodgers Fanuel</span>
             <ul>
                 <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="projects.html" target="_blank">Projects</a></li>
