--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="navbar">
             <span>Rodgers Fanuel</span>
             <ul>
                 <li><a href="index.html" target="_blank">Home</a></li>
@@ -20,7 +20,6 @@
                 <li><a href="articles.html" target="_blank">Articles</a></li>
                 <li><a href="contact.html" target="_blank">Contact</a></li>
             </ul>
-
             <h1>Frontend Developer</h1>
         </nav>
     </header>
