modified the h1 element position

--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -21,9 +21,10 @@
                 <li><a href="contact.html" target="_blank">Contact</a></li>
             </ul>
         </nav>
-        <h1>Frontend Developer</h1>
     </header>
     <main>
+        <h1>Frontend Developer</h1>
+        <div class="flex-container">
         <section>
         <h2>Projects</h2>
         <ul>
@@ -97,6 +98,7 @@
 
             </div>
         </section>
+        </div>
     </main>
     <footer>
         <small>&copy; all rights reserved 2025</small>
