Modified flex items positions

--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -43,13 +43,11 @@
             <p>Solved all the frontend projects</p> <br>
             <a href="https://roadmap.sh/u/r0elcompute" target="_blank">Visit my Profile</a>
         </div>
-        </section>
-
-        <section>
+ 
             <h2>OpenSource Work</h2>
-            <p>Contributed to opensource projects along with other 
-                enthusiastic developers.My own projects have a good
-                rating of 180 stars on Github.
+            <p>Contributed to opensource projects along <br> with other 
+                enthusiastic developers. <br>My own projects have a good
+                rating of <br> 180 stars on Github.
             </p>
             <a href="https://github.com/r0elcompute" target="_blank" rel="noopener">Visit my Github Profile</a>
         </section>
@@ -73,6 +71,7 @@
                 </ul>
             </p>
         </section>
+        </div>
 
         <section>
             <h2>Reviews from my Teachers</h2>
@@ -98,7 +97,6 @@
 
             </div>
         </section>
-        </div>
     </main>
     <footer>
         <small>&copy; all rights reserved 2025</small>
