Modified existing elements and also added new ones

--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -25,7 +25,7 @@
     <main>
         <h1>Frontend Developer</h1>
         <div class="flex-container">
-        <section>
+        <section class="projects">
         <h2>Projects</h2>
         <ul>
             <li>HTML Only Portfolio</li>
@@ -36,29 +36,33 @@
         </ul>
         </section>
 
-        <section>
+        <section class="experience">
         <div>
-            <h2>Work experience</h2>
-            <h3>roadmap.sh</h3>
+            <h2>Work experience</h2> <br>
+            <h3>roadmap.sh</h3> <br>
             <p>Solved all the frontend projects</p> <br>
-            <a href="https://roadmap.sh/u/r0elcompute" target="_blank">Visit my Profile</a>
-        </div>
- 
-            <h2>OpenSource Work</h2>
+            <a href="https://roadmap.sh/u/r0elcompute" target="_blank">Visit my Profile</a> 
+        </div> 
+        <br>
+        <hr>
+        <br>
+        <div>
+            <h2>OpenSource Work</h2> <br>
             <p>Contributed to opensource projects along <br> with other 
                 enthusiastic developers. <br>My own projects have a good
                 rating of <br> 180 stars on Github.
-            </p>
+            </p> <br>
             <a href="https://github.com/r0elcompute" target="_blank" rel="noopener">Visit my Github Profile</a>
+        </div>
         </section>
 
-        <section>
-            <h2>Education</h2>
+        <section class="education">
+            <h2>Education</h2> <br>
             <p>Graduated with a 3.8 GPA and won the TUMSA hackathon. <br>
                 I also organized 30 tech sessions along other TUMSA students. <br>
-            </p>
+            </p> <br>
 
-            <p>Corses I took: </p>
+            <p>Corses I took: </p> <br>
             <p>
                 <ul>
                     <li>- Object Oriented Programming</li>
