--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -81,20 +81,20 @@
             <h2>Reviews from my Teachers</h2>
             <div class="cards-container">
             <div class="card">
-                <p>Rodgers Fanuel was a well mannered student <br> with the undying urge to learn and explore <br>
-                    Tech was something he was passionate about <br> and even helped other students in his free time <br>
+                <p>Rodgers Fanuel was a well mannered student with the undying urge to learn and explore
+                    Tech was something he was passionate about and even helped other students in his free time
                 </p> <br>
                 <p>James Orengo</p>
                 <p>Assistant Professor</p>
             </div>
             <div class="card">
-                <p>Rodgers Fanuel was a down to earth tech explorer <br>, he wouldn't leave the classroom before understanding <br>
+                <p>Rodgers Fanuel was a down to earth tech explorer, he wouldn't leave the classroom before understanding
                 the topic for the day! </p> <br>
                 <p>Michael Jarenga</p>
                 <p>Professor</p>
             </div>
             <div class="card">
-                <p>Rodgers is one of those names we rarely mention <br> but when we do, our hearts go down a memory lane. <br>
+                <p>Rodgers is one of those names we rarely mention but when we do, our hearts go down a memory lane.
                 He will forever be an inspiration!</p> <br>
                 <p>Jane</p>
                 <p>Dean of studies</p>
