Adjusted the images directory

--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -34,6 +34,7 @@
             <li>Countdown Timer</li>
             <li>Product Upcoming Page</li>
         </ul>
+        <a href="projects.html"><button>Check out my projects portfolio!</button></a>
         </section>
 
         <section class="experience">
@@ -41,7 +42,7 @@
             <h2>Work experience</h2> <br>
             <h3>roadmap.sh</h3> <br>
             <p>Solved all the frontend projects</p> <br>
-            <a href="https://roadmap.sh/u/r0elcompute" target="_blank">Visit my Profile</a> 
+            <a href="https://roadmap.sh/u/r0elcompute" target="_blank" rel="noopener norefferer">Visit my Profile</a> 
         </div> 
         <br>
         <hr>
@@ -62,7 +63,7 @@
                 I also organized 30 tech sessions along other TUMSA students. <br>
             </p> <br>
 
-            <p>Corses I took: </p> <br>
+            <p>Courses I took: </p> <br>
             <p>
                 <ul>
                     <li>- Object Oriented Programming</li>
@@ -82,21 +83,22 @@
             <div class="cards-container">
             <div class="card">
                 <p>Rodgers Fanuel was a well mannered student with the undying urge to learn and explore
-                    Tech was something he was passionate about and even helped other students in his free time
-                </p> <br>
-                <p>James Orengo</p>
+                    Tech was something he was passionate about and even helped other students in his free time.
+                </p> 
+                <br>
+                <p>James Orengo - </p> 
                 <p>Assistant Professor</p>
             </div>
             <div class="card">
                 <p>Rodgers Fanuel was a down to earth tech explorer, he wouldn't leave the classroom before understanding
                 the topic for the day! </p> <br>
-                <p>Michael Jarenga</p>
+                <p>Michael Jarenga - </p>
                 <p>Professor</p>
             </div>
             <div class="card">
                 <p>Rodgers is one of those names we rarely mention but when we do, our hearts go down a memory lane.
                 He will forever be an inspiration!</p> <br>
-                <p>Jane</p>
+                <p>Jane - </p>
                 <p>Dean of studies</p>
             </div>
             </div>
