--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -82,7 +82,7 @@
             <h2>Reviews from my Teachers</h2>
             <div class="cards-container">
             <div class="card">
-                <p>Rodgers Fanuel was a well mannered student with the undying urge to learn and explore
+                <p>Rodgers Fanuel was a well mannered student with the undying urge to learn and explore.
                     Tech was something he was passionate about and even helped other students in his free time.
                 </p> 
                 <br>
