--- a/Front-end/03-Personal portfolio/contact.html
+++ b/Front-end/03-Personal portfolio/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/696fe727ac.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/contact.css">
     <title>Contact me</title>
 </head>
 <body>
