Modified body structure

--- a/Front-end/03-Personal portfolio/contact.html
+++ b/Front-end/03-Personal portfolio/contact.html
@@ -8,6 +8,7 @@
     <title>Contact me</title>
 </head>
 <body>
+    <div class="container">
     <h1>Feel free to reach out</h1>
     <form action="mailto:rodgersmwangi20@gmail.com">
         <label for="name">Name:</label>
@@ -18,10 +19,11 @@
         <input type="email" name="email" id="email" required>
         <br>
         <br>
-        <label for="message"></label>
+        <label for="message">Message me:</label> <br>
         <textarea name="message" cols="30" rows="10" id="message"></textarea>
         <br>
         <input type="submit"> 
     </form>
+    </div>
 </body>
 </html>
