--- a/Front-end/03-Personal portfolio/contact.html
+++ b/Front-end/03-Personal portfolio/contact.html
@@ -11,11 +11,11 @@
     <div class="container">
     <h1>Feel free to reach out</h1>
     <form action="mailto:rodgersmwangi20@gmail.com">
-        <label for="name">Name:</label>
+        <label for="name">Name:</label> <br>
         <input type="text" name="text" id="name" required>
         <br>
         <br>
-        <label for="email">Email:</label>
+        <label for="email">Email:</label> <br>
         <input type="email" name="email" id="email" required>
         <br>
         <br>
