--- a/Front-end/03-Personal portfolio/contact.html
+++ b/Front-end/03-Personal portfolio/contact.html
@@ -11,18 +11,18 @@
     <div class="container">
     <h1>Feel free to reach out</h1>
     <form action="mailto:rodgersmwangi20@gmail.com">
-        <label for="name">Name:</label> <br>
+        <label for="name">Name</label> <br>
         <input type="text" name="text" id="name" required>
         <br>
         <br>
-        <label for="email">Email:</label> <br>
+        <label for="email">Email</label> <br>
         <input type="email" name="email" id="email" required>
         <br>
         <br>
-        <label for="message">Message me:</label> <br>
+        <label for="message">Message me</label> <br>
         <textarea name="message" cols="30" rows="10" id="message"></textarea>
         <br>
-        <input type="submit"> 
+        <input id="submit" type="submit"> 
     </form>
     </div>
 </body>
