Modified html document structure

--- a/Front-end/03-Personal portfolio/articles.html
+++ b/Front-end/03-Personal portfolio/articles.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/696fe727ac.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/articles.css">
     <title>Articles</title>
 </head>
 <body>
     <h1>Read the following articles</h1>
+    <div class="container">
     <article>
         <h2>Why is responsive web design important?</h2>
         <p>Responsive web desing in web development is important because it helps with a website's <br>
@@ -22,6 +24,8 @@
           but instead should work to understand the basics of web programming.They may use AI only if they have <br>
           deeply and truly understood the basic knowledge of web programming</p>
     </article>
+    </div>
     <p>Disclaimer: I wrote this articles are mockups not really rooted in the thoughts of the articles.</p>
+    <p>Articles page to be updated later...</p>
 </body>
 </html>
