--- a/Front-end/03-Personal portfolio/articles.html
+++ b/Front-end/03-Personal portfolio/articles.html
@@ -22,7 +22,7 @@
         <p>AI is a really deep subject of discussion as far as software development and academics is concerned. <br>
           A beginner stepping into web development should not immediatelly kick off with the use of LLMs <br>
           but instead should work to understand the basics of web programming.They may use AI only if they have <br>
-          deeply and truly understood the basic knowledge of web programming</p>
+          deeply and truly understood the basic knowledge of web programming.</p>
     </article>
     </div>
     <p>Disclaimer: I wrote this articles are mockups not really rooted in the thoughts of the articles.</p>
