Adjusted html structure

--- a/Front-end/03-Personal portfolio/projects.html
+++ b/Front-end/03-Personal portfolio/projects.html
@@ -9,6 +9,22 @@
 <body>
     <h1>Projects I did</h1>
     <div>
+        <p>This product landing page, was a practice one to be exact, it was meant to <br>
+        a certification project from Freecodecamp, thanks to the excellent guidance at <br> Freecodcamp,
+    it ended up turning out to be crispy clean, you should check it out!</p>
+    </div>
+    <div>
+        <p>This is a simple command line calculator with basic functionality such as; <br>
+        <ul>
+            <li>Addition</li>
+            <li>Subtraction</li>
+            <li>Division</li>
+            <li>Multiplication</li>
+        </ul>
+    Have fun using it!</p>
+    </div>
+    <div class="container">
+    <div>
         <h2>Product upcoming page</h2>
         <img src="./images/product-page.jpg" alt="product landing page image">
     </div>
@@ -21,6 +37,7 @@
     <div>
         <h2>HTML only website</h2>
         <img src="./images/HTML-website.png" alt="website" height="200">
+    </div>
     </div>
 </body>
 </html>
