Made an overall layout adjustment and h1 adjustment

--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <h1>Frontend Developer</h1>
+        <h1>Software Engineer</h1>
         <div class="flex-container">
         <section class="projects">
         <h2>Projects</h2>
@@ -42,7 +42,7 @@
             <h2>Work experience</h2> <br>
             <h3>roadmap.sh</h3> <br>
             <p>Solved all the frontend projects</p> <br>
-            <a href="https://roadmap.sh/u/r0elcompute" target="_blank" rel="noopener norefferer">Visit my Profile</a> 
+            <a href="https://roadmap.sh/u/r0elcompute" target="_blank">Visit my Profile</a> 
         </div> 
         <br>
         <hr>
@@ -53,7 +53,7 @@
                 enthusiastic developers. <br>My own projects have a good
                 rating of <br> 180 stars on Github.
             </p> <br>
-            <a href="https://github.com/r0elcompute" target="_blank" rel="noopener">Visit my Github Profile</a>
+            <a href="https://github.com/r0elcompute" target="_blank">Visit my Github Profile</a>
         </div>
         </section>
 
