Adjusted the text in paragraph tags

--- a/Front-end/03-Personal portfolio/projects.html
+++ b/Front-end/03-Personal portfolio/projects.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <h1>Projects I did</h1>
-    <div>
-        <p>This product landing page, was a practice one to be exact, it was meant to <br>
+    <div class="aside">
+    <aside>
+        <p>This product landing page, was a practice one to be exact, it was meant to be<br>
         a certification project from Freecodecamp, thanks to the excellent guidance at <br> Freecodcamp,
     it ended up turning out to be crispy clean, you should check it out!</p>
-    </div>
-    <div>
+    </aside>
+    <aside>
         <p>This is a simple command line calculator with basic functionality such as; <br>
         <ul>
             <li>Addition</li>
@@ -22,6 +23,12 @@
             <li>Multiplication</li>
         </ul>
     Have fun using it!</p>
+    </aside>
+    <aside>
+        <p>This is a HTML only website to imply that I made this website entirely <br>
+        out of pure HTML, I feel proud of this project because it helped me solidify <br>
+    my understanding of semantic HTML elements!</p>
+    </aside>
     </div>
     <div class="container">
     <div>
