Updated font sizes

--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -8,6 +8,7 @@
     <meta property="og:description" content="A basic HTML portfolio webpage">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="./css/index.css">
+    <script src="https://kit.fontawesome.com/696fe727ac.js" crossorigin="anonymous"></script>
     <title>Rodger Fanuel || Portfolio</title>
 </head>
 <body>
