--- a/Front-end/03-Personal portfolio/projects.html
+++ b/Front-end/03-Personal portfolio/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/projects.css">
+    <script src="https://kit.fontawesome.com/696fe727ac.js" crossorigin="anonymous"></script>
     <title>Projects</title>
 </head>
 <body>
