modified the font units

--- a/Front-end/03-Personal portfolio/articles.html
+++ b/Front-end/03-Personal portfolio/articles.html
@@ -25,7 +25,7 @@
           deeply and truly understood the basic knowledge of web programming.</p>
     </article>
     </div>
-    <p>Disclaimer: I wrote this articles are mockups not really rooted in the thoughts of the articles.</p>
+    <p>Disclaimer: I wrote this articles are mockups and am not really rooted in the thoughts of the articles.</p>
     <p>Articles page to be updated later...</p>
 </body>
 </html>
