Added a p tag to main tag

--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -25,6 +25,7 @@
     </header>
     <main>
         <h1>Software Engineer</h1>
+        <p id="catchy-text">Tech ushers in the future!</p>
         <div class="flex-container">
         <section class="projects">
         <h2>Projects</h2>
@@ -42,7 +43,7 @@
         <div>
             <h2>Work experience</h2> <br>
             <h3>roadmap.sh</h3> <br>
-            <p>Solved all the frontend projects</p> <br>
+            <p>Solving all the projects</p> <br>
             <a href="https://roadmap.sh/u/r0elcompute" target="_blank">Visit my Profile</a> 
         </div> 
         <br>
@@ -50,9 +51,9 @@
         <br>
         <div>
             <h2>OpenSource Work</h2> <br>
-            <p>Contributed to opensource projects along <br> with other 
-                enthusiastic developers. <br>My own projects have a good
-                rating of <br> 180 stars on Github.
+            <p>I am contributing to opensource projects along <br> with other 
+                enthusiastic developers and will soon avail a portfolio of other <br>
+                cool projects!
             </p> <br>
             <a href="https://github.com/r0elcompute" target="_blank">Visit my Github Profile</a>
         </div>
@@ -60,11 +61,14 @@
 
         <section class="education">
             <h2>Education</h2> <br>
-            <p>Graduated with a 3.8 GPA and won the TUMSA hackathon. <br>
-                I also organized 30 tech sessions along other TUMSA students. <br>
-            </p> <br>
+            <p>I attend the Technical University of Mombasa majoring in Bachelor of Technology <br>
+                with deep aspirations of becoming <br> a software engineeer.</p>
+                <p>
+                I believe in participation and practice and consistency <br> more than anything, I therefore
+            take part in many tech <br> events and foster connections with other enthusiastic learners!  </p>
+         <br>
 
-            <p>Courses I took: </p> <br>
+            <p>Courses I am Undertaking: </p> <br>
             <p>
                 <ul>
                     <li>- Object Oriented Programming</li>
@@ -83,21 +87,21 @@
             <h2>Reviews from my Teachers</h2>
             <div class="cards-container">
             <div class="card">
-                <p>Rodgers Fanuel was a well mannered student with the undying urge to learn and explore.
-                    Tech was something he was passionate about and even helped other students in his free time.
+                <p>Rodgers Fanuel is a well mannered student with the undying urge to learn and explore.
+                    Tech is something he is passionate about and even helps other students in his free time.
                 </p> 
                 <br>
                 <p>James Orengo - </p> 
                 <p>Assistant Professor</p>
             </div>
             <div class="card">
-                <p>Rodgers Fanuel was a down to earth tech explorer, he wouldn't leave the classroom before understanding
+                <p>Rodgers Fanuel is a down to earth tech explorer, he wouldn't leave the classroom before understanding
                 the topic for the day! </p> <br>
                 <p>Michael Jarenga - </p>
                 <p>Professor</p>
             </div>
             <div class="card">
-                <p>Rodgers is one of those names we rarely mention but when we do, our hearts go down a memory lane.
+                <p>Rodgers is one of those names we rarely mention but when we do, our hearts are filled with joy!.
                 He will forever be an inspiration!</p> <br>
                 <p>Jane - </p>
                 <p>Dean of studies</p>
