Modified aside class to middle class

--- a/Front-end/03-Personal portfolio/projects.html
+++ b/Front-end/03-Personal portfolio/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Projects I did</h1>
-    <div class="aside">
+    <div class="middle">
     <aside>
         <p>This product landing page, was a practice one to be exact, it was meant to be<br>
         a certification project from Freecodecamp, thanks to the excellent guidance at <br> Freecodcamp,
