Added left flex links

--- a/Front-end/03-Personal portfolio/projects.html
+++ b/Front-end/03-Personal portfolio/projects.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Projects I did</h1>
+    <div class="left">
+        <p><a href="https://github.com/r0elcompute">Github link</a></p>
+        <p><a href="https://github.com/r0elcompute">Github link</a></p>
+        <p><a href="https://github.com/r0elcompute">Github link</a></p>
+    </div>
     <div class="middle">
     <aside>
         <p>This product landing page, was a practice one to be exact, it was meant to be<br>
