--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -16,10 +16,10 @@
         <nav id="navbar">
             <span>Rodgers Fanuel</span>
             <ul>
-                <li><a href="index.html" target="_blank">Home</a></li>
-                <li><a href="projects.html" target="_blank">Projects</a></li>
-                <li><a href="articles.html" target="_blank">Articles</a></li>
-                <li><a href="contact.html" target="_blank">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="articles.html">Articles</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
