--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -49,7 +49,7 @@
         <div>
             <h3>OpenSource Work</h3> <br>
             <p>I am contributing to open source projects along <br> with other 
-                enthusiastic developers and will soon avail a portfolio of other <br>
+                enthusiastic developers and will <br> soon avail a portfolio of other 
                 cool projects!
             </p> <br>
             <a href="https://github.com/r0elcompute" target="_blank">Visit my Github Profile</a>
