Modified line breaks in education section

--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -58,11 +58,11 @@
 
         <section class="education">
             <h2>Education</h2> <br>
-            <p>I attend the Technical University of Mombasa majoring in Bachelor of Technology <br>
+            <p>I attend the Technical University of Mombasa majoring <br> in Bachelor of Technology
                 with deep aspirations of becoming <br> a software engineeer.</p>
                 <p>
                 I believe in participation and practice and consistency <br> more than anything, I therefore
-            take part in many tech <br> events and foster connections with other enthusiastic learners!  </p>
+            take part in many tech <br> events and foster connections with other enthusiastic <br> learners!  </p>
          <br>
 
             <p>Courses I am Undertaking: </p> <br>
