Modified the structure

--- a/Front-end/03-Personal portfolio/projects.html
+++ b/Front-end/03-Personal portfolio/projects.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Projects I did</h1>
+    <div class="container">
     <div class="left">
         <p><a href="https://github.com/r0elcompute">Github link</a></p>
         <p><a href="https://github.com/r0elcompute">Github link</a></p>
@@ -50,6 +51,7 @@
     <div>
         <h2>HTML only website</h2>
         <img src="./images/HTML-website.png" alt="website" height="200">
+    </div>
     </div>
     </div>
 </body>
