--- a/Front-end/03-Personal portfolio/projects.html
+++ b/Front-end/03-Personal portfolio/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Projects I did</h1>
-    <div class="container">
+    <div class="main-container">
     <div class="left">
         <p><a href="https://github.com/r0elcompute">Github link</a></p>
         <p><a href="https://github.com/r0elcompute">Github link</a></p>
