contained the final p tags in disclaimer class

--- a/Front-end/03-Personal portfolio/articles.html
+++ b/Front-end/03-Personal portfolio/articles.html
@@ -25,7 +25,9 @@
           deeply and truly understood the basic knowledge of web programming.</p>
     </article>
     </div>
-    <p>Disclaimer: I wrote this articles are mockups and am not really rooted in the thoughts of the articles.</p>
+    <div class="disclaimer">
+    <p>Disclaimer: I wrote this articles are mockups and am not really <br> rooted in the thoughts of the articles.</p>
     <p>Articles page to be updated later...</p>
+    </div>
 </body>
 </html>
