--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Basic HTML website">
-    <meta property="og:url" content="https://roadmap.sh">
-    <meta property="og:description" content="A basic HTML portfolio webpage">
+    <meta property="og:title" content="My portfolio website">
+    <meta property="og:url" content="https://r0elcompute.netlify.app">
+    <meta property="og:image" content="./images/imageResized.png">
+    <meta property="og:description" content="My portfolio website">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="./css/index.css">
     <script src="https://kit.fontawesome.com/696fe727ac.js" crossorigin="anonymous"></script>
