--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="My portfolio website">
     <meta property="og:url" content="https://r0elcompute.netlify.app">
-    <meta property="og:image" content="https://r0elcompute.netlify.app/Front-end/03-Personal portfolio/images/preview-image.png">
+    <meta property="og:image" content="https://r0elcompute.netlify.app/preview-image.png">
     <meta property="og:description" content="My portfolio website">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="./css/index.css">
