--- a/Front-end/03-Personal portfolio/index.html
+++ b/Front-end/03-Personal portfolio/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="./css/index.css">
     <script src="https://kit.fontawesome.com/696fe727ac.js" crossorigin="anonymous"></script>
-    <title>Rodger Fanuel || Portfolio</title>
+    <title>Rodgers Fanuel || Portfolio</title>
 </head>
 <body>
     <header>
