--- a/Front-end/02-Basic-HTML-website/index.html
+++ b/Front-end/02-Basic-HTML-website/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <span></span>
+            <span>Rodgers Fanuel</span>
             <ul>
                 <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="projects.html" target="_blank">Projects</a></li>
