added image meta tag

--- a/Front-end/02-Basic-HTML-website/index.html
+++ b/Front-end/02-Basic-HTML-website/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Basic HTML website">
     <meta property="og:url" content="https://roadmap.sh">
+    <meta property="og:image" content="2025-04-25_19-33.png">
     <meta property="og:description" content="A basic HTML portfolio webpage">
     <meta property="og:type" content="website">
     <title>Rodger Fanuel || Portfolio</title>
