finished creating markup/html file

--- a/Front-end/04-Changelog component/index.html
+++ b/Front-end/04-Changelog component/index.html
@@ -15,15 +15,33 @@
     <div class="container">
         <h1>Changelog Component</h1>
         <p>Here's everything we have shipped in the past few days</p>
-        <div class="left"></div>
-        <div class="middle">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="left">
+            <p class="date">September 3, 2024</p>
+            <p class="date">August 28, 2024</p>
+            <p class="date">August 25, 2024</p>
+            <p class="date">August 22, 2024</p>
+            <p class="date">August 15, 2024</p>
+            <p class="date">August 10, 2024</p>
+            <p class="date">August 1, 2024</p>
         </div>
-        <div class="right"></div>
+        <div class="middle">
+            <div class="knot"></div>
+            <div class="knot"></div>
+            <div class="knot"></div>
+            <div class="knot"></div>
+            <div class="knot"></div>
+            <div class="knot"></div>
+            <div class="knot"></div>
+        </div>
+        <div class="right">
+            <p class="text">Announcing projects on frontend roadmap</p>
+            <p class="text">Build your learning habits with learning streaks</p>
+            <p class="text">Git and Github Roadmap</p>
+            <p class="text">Submit your project solution and get feedback</p>
+            <p class="text">Backend Project Ideas</p>
+            <p class="text">Redis roadmap</p>
+            <p class="text">Changelog page to help you stay in the loop</p>
+        </div>
     </div>
     <button>View Complete Changelog</button>
 </body>
