modified the html structure

--- a/Front-end/04-Changelog component/index.html
+++ b/Front-end/04-Changelog component/index.html
@@ -12,9 +12,11 @@
     <title>Changelog component</title>
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>Changelog Component</h1>
         <p>Here's everything we have shipped in the past few days</p>
+    </header>
+        <div class="inner-container">
         <div class="left">
             <p class="date">September 3, 2024</p>
             <p class="date">August 28, 2024</p>
@@ -25,6 +27,7 @@
             <p class="date">August 1, 2024</p>
         </div>
         <div class="middle">
+            <div class="knot-container">
             <div class="knot"></div>
             <div class="knot"></div>
             <div class="knot"></div>
@@ -32,6 +35,7 @@
             <div class="knot"></div>
             <div class="knot"></div>
             <div class="knot"></div>
+            </div>
         </div>
         <div class="right">
             <p class="text">Announcing projects on frontend roadmap</p>
@@ -43,6 +47,8 @@
             <p class="text">Changelog page to help you stay in the loop</p>
         </div>
     </div>
-    <button>View Complete Changelog</button>
+    <div class="button">
+    <button>Visit Complete Changelog</button>
+    </div>
 </body>
 </html>
