Modified the text class

--- a/Front-end/05-Testimonial cards/index.html
+++ b/Front-end/05-Testimonial cards/index.html
@@ -14,7 +14,12 @@
 <body>
     <div class="container">
         <div class="small-card card1">
-            
+            <div class="text">
+                <p>He is an experienced tech savvy, we had a problem we <br>
+                we been working on for the last week or so, and on his involvement <br>
+            we were able to get through it in a single day, funny thing is, it was <br>
+        a whole communications application!</p>
+            </div>
         </div>
         <div class="small-card card2">
 
