--- a/Front-end/05-Testimonial cards/index.html
+++ b/Front-end/05-Testimonial cards/index.html
@@ -14,21 +14,49 @@
 <body>
     <div class="container">
         <div class="small-card card1">
+            <div class="image">
+                <img src="./images/images.jpg" alt="testimonial image">
+            </div>
             <div class="text">
                 <p>He is an experienced tech savvy, we had a problem we <br>
                 we been working on for the last week or so, and on his involvement <br>
             we were able to get through it in a single day, funny thing is, it was <br>
         a whole communications application!</p>
             </div>
+            <button>View more</button>
         </div>
-        <div class="small-card card2">
-
+        <div class="card">
+            <div class="image">
+                <img src="images/images1.jpg" alt="testimonial image">
+            </div>
+            <div class="text">
+                <p>He is one of those guys whom when you have around, nothing barely goes wrong. <br>
+                He is so into tech, that tech literally bends to his will!</p>
+            </div>
+            <button>View more</button>
         </div>
-        <div class="big-card card3">
-
+        <div class="card">
+            <div class="image">
+                <img src="images/images2.jpg" alt="testimonial image">
+            </div>
+            <div class="text">
+                I remember a time when git troubleshooting was a huge task. <br>
+                I step up to him and he just takes 1 hour to make me understand everything. <br>
+                I was amazed and greatful at the same time.
+            </div>
+            <button>View more</button>
         </div>
-        <div class="big-card card4">
-
+        <div class="card">
+            <div class="image">
+                <img src="images/images3.jpg" alt="testimonial image">
+            </div>
+            <div class="text">
+                <p>
+                    I still look up to him for advice concerning several aspects of the computing world <br> that still puzzle me.
+                    He is literally my mentor!
+                </p>
+                <button>View more</button>            
+            </div>
         </div>
     </div>
 </body>
