modified the html structure

--- a/Front-end/05-Testimonial cards/index.html
+++ b/Front-end/05-Testimonial cards/index.html
@@ -13,38 +13,44 @@
 </head>
 <body>
     <div class="container">
-        <div class="small-card card1">
+        <div class="card">
             <div class="image">
                 <img src="./images/images.jpg" alt="testimonial image">
             </div>
             <div class="text">
-                <p>He is an experienced tech savvy, we had a problem we <br>
-                we been working on for the last week or so, and on his involvement <br>
-            we were able to get through it in a single day, funny thing is, it was <br>
+                <p>He is an experienced tech savvy, we had a problem we
+                we been working on for the last week or so, and on his involvement
+            we were able to get through it in a single day, funny thing is, it was
         a whole communications application!</p>
             </div>
+            <div class="btn-container">
             <button>View more</button>
+            </div>
         </div>
         <div class="card">
             <div class="image">
-                <img src="images/images1.jpg" alt="testimonial image">
+                <img src="images/images1.jpg" alt="testimonial image" width="auto" height="200rem">
             </div>
             <div class="text">
-                <p>He is one of those guys whom when you have around, nothing barely goes wrong. <br>
+                <p>He is one of those guys whom when you have around, nothing barely goes wrong.
                 He is so into tech, that tech literally bends to his will!</p>
             </div>
+            <div class="btn-container">
             <button>View more</button>
+            </div>
         </div>
         <div class="card">
             <div class="image">
                 <img src="images/images2.jpg" alt="testimonial image">
             </div>
             <div class="text">
-                I remember a time when git troubleshooting was a huge task. <br>
-                I step up to him and he just takes 1 hour to make me understand everything. <br>
+                I remember a time when git troubleshooting was a huge task.
+                I step up to him and he just takes 1 hour to make me understand everything.
                 I was amazed and greatful at the same time.
             </div>
+            <div class="btn-container">
             <button>View more</button>
+            </div>
         </div>
         <div class="card">
             <div class="image">
@@ -52,11 +58,13 @@
             </div>
             <div class="text">
                 <p>
-                    I still look up to him for advice concerning several aspects of the computing world <br> that still puzzle me.
+                    I still look up to him for advice concerning several aspects of the computing world that still puzzle me.
                     He is literally my mentor!
-                </p>
-                <button>View more</button>            
+                </p>         
             </div>
+            <div class="btn-container">
+            <button>View more</button>  
+            </div> 
         </div>
     </div>
 </body>
