modified image sizes and added h3 heading tag

--- a/Front-end/05-Testimonial cards/index.html
+++ b/Front-end/05-Testimonial cards/index.html
@@ -15,9 +15,10 @@
     <div class="container">
         <div class="card">
             <div class="image">
-                <img src="./images/images.jpg" alt="testimonial image">
+                <img src="./images/images.jpg" alt="testimonial image" width="250">
             </div>
             <div class="text">
+                <h3>John</h3>
                 <p>He is an experienced tech savvy, we had a problem we
                 we been working on for the last week or so, and on his involvement
             we were able to get through it in a single day, funny thing is, it was
@@ -32,6 +33,7 @@
                 <img src="images/images1.jpg" alt="testimonial image" width="auto" height="200rem">
             </div>
             <div class="text">
+                <h3>Peter</h3>
                 <p>He is one of those guys whom when you have around, nothing barely goes wrong.
                 He is so into tech, that tech literally bends to his will!</p>
             </div>
@@ -44,6 +46,7 @@
                 <img src="images/images2.jpg" alt="testimonial image">
             </div>
             <div class="text">
+                <h3>Ethan</h3>
                 I remember a time when git troubleshooting was a huge task.
                 I step up to him and he just takes 1 hour to make me understand everything.
                 I was amazed and greatful at the same time.
@@ -57,6 +60,7 @@
                 <img src="images/images3.jpg" alt="testimonial image">
             </div>
             <div class="text">
+                <h3>Matilda</h3>
                 <p>
                     I still look up to him for advice concerning several aspects of the computing world that still puzzle me.
                     He is literally my mentor!
